# gakkaweo

./: .editorconfig  .env.prod.sample  .env.sample  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  openapi-full.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md  task.md
.github/workflows/: cd.yml  ci.yml  openapi-docs.yml
.husky/: pre-commit
ai-service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
ai-service/app/: main.py  model.py  normalize.py  schemas.py
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  build.gradle
docs/: api-spec.md  branch-strategy.md  commit-convention.md  design-system.md
docs-site/: index.html
docs/decisions/: ai-service.md  backend.md  frontend.md  infra.md
docs/performance/: db-indexes-v1.md
frontend/: .env.development  .gitignore  .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: robots.txt  site.webmanifest  sitemap.xml
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/api/: client.ts
frontend/src/app/: App.tsx  ErrorBoundary.tsx  guards.tsx  router.tsx
frontend/src/pages/: GamePage.tsx  HomePage.tsx  LoginPage.tsx  MyPage.tsx  NotFoundPage.tsx  PrivacyPolicyPage.tsx  RankingPage.tsx  TermsOfServicePage.tsx
infra/prometheus/: prometheus.dev.yml  prometheus.prod.yml
nginx/: api.conf  cloudflare-ips.conf  default.conf  gakkaweo.conf
(+448 files in other folders)
